removed float to stop overlapping text

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -229,7 +229,6 @@ aside ul.buttons a strong {
 
 section#content {
   width: auto;
-  float: right;
   padding-bottom: 50px;
   padding-left: 400px;
 }
